Hitscan Wand changes, code and class clean-up
Changes:

Updates to Fireball Hitscan wand, which include:
* Can now hit anything, including blocks and non-living entities
* Living entities now explode stronger than other hit types
* Removed the miss sound effect when not hitting a living entity
	(it still makes the hit sound on living entities)

This should hopefully make this wand more fun to use.

Removed redundant classes
* CustomFallingBlockEntity and its dependencies
* Still decided to keep LargeFireballMixin, since
some users may prefer to enable it for performance reasons

Made a majority of the values non-hardcoded
in almost all Java classes

Removed a lot of redundant variables, imports, etc.

Other small code clean-ups

Updated README.md

This should hopefully make the code more readable,
easier to work with and troubleshoot and the
Fireball Hitscan Wand more fun to use.